--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,19 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <h1>Users</h1>
+    <table cellpadding="3" cellspacing="3"> 
+      <thead>
+        <th align="center">&nbsp;</th>
+        <th align="center">Id</th>
+        <th align="center">First Name</th>
+        <th align="center">Last Name</th>
+        <th align="center">Email</th>
+      </thead>
+      <tbody id="users">
+
+      </tbody>
+    </table>
     <script src="bundle.js"></script>
 </body>
 
